<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_nav"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_course_nav"
            android:title="@string/nav_course_and_style" />
        <item
            android:id="@+id/nav_coin"
            android:icon="@drawable/ic_coin_nav"
            android:title="@string/nav_coin" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_nav"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video_nav"
            android:title="@string/nav_video" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us_nav"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_nav"
            android:title="@string/logout" />
    </group>
</menu>