<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.StudentCourseActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_course_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/course_title"
        app:titleTextColor="@color/white" />

    <fragment
        android:id="@+id/youtube_player"
        android:name="com.google.android.youtube.player.YouTubePlayerFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/txt_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/course" />

        <TextView
            android:id="@+id/txt_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:text="@string/coin" />

        <TextView
            android:id="@+id/txt_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_course_name"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/hour" />

        <TextView
            android:id="@+id/txt_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_hour"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/style" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_style"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/description" />

        <Button
            android:id="@+id/btn_watch_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_description"
            android:text="@string/watch_class" />

        <TextView
            android:id="@+id/txt_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_watch_class"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/gallery" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_student_course_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_gallery"
            android:background="@android:color/white"
            tools:listitem="@layout/course_gallery_item" />

    </RelativeLayout>

</LinearLayout>