<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".DialogFragment.StudentCoinPackPaymentDialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_pay"
            android:textColor="#000"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title"
            android:layout_marginTop="8dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_payment_gateway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_gateway"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio_qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_code" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group"
            android:layout_alignParentEnd="true"
            android:text="@string/ok" />

    </RelativeLayout>

</LinearLayout>