<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:orientation="vertical"
    tools:context=".DialogFragment.CourseDetailDialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp">

        <TextView
            android:id="@+id/txt_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kanit_medium"
            android:text="@string/course"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_course"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/style"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_style"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/length"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_desc_fix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_length"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/description_thai"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_desc_fix"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_desc"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/kanit_regular"
            android:padding="8dp"
            android:text="@string/close"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>