<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    tools:context=".Activities.ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:fontFamily="@font/kanit_regular"
        android:text="@string/ForgetPassword"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="29.88dp"
        android:background="@drawable/shapeemail"
        android:fontFamily="@font/kanit_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="43.46dp"
        android:paddingEnd="43.46dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_send_request"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shapelogin"
        android:fontFamily="@font/kanit_regular"
        android:shadowColor="@android:color/transparent"
        android:text="@string/send_request_pass"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="16.31dp"
        android:background="@drawable/shapeloginfacebook"
        android:fontFamily="@font/kanit_regular"
        android:shadowColor="@android:color/transparent"
        android:text="@string/back"
        android:textColor="@color/white" />

</LinearLayout>