<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg_login"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kanit_medium"
            android:text="@string/login"
            android:textColor="@color/txt_color_all"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kanit_regular"
            android:text="@string/checkin_or_register"
            android:layout_marginTop="17dp"
            android:textColor="@color/txt_color_all"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="29.88dp"
            android:fontFamily="@font/kanit_medium"
            android:hint="@string/username_login"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_start_username"
            android:drawablePadding="20dp"
            android:textColor="@color/color_username_login"
            android:textColorHighlight="@color/color_username_login"
            android:textColorHint="@color/color_username_login"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/kanit_medium"
            android:hint="@string/password_login"
            android:drawableStart="@drawable/ic_pass"
            android:inputType="textPassword"
            android:drawablePadding="20dp"
            android:textColor="@color/color_username_login"
            android:textColorHighlight="@color/color_username_login"
            android:textColorHint="@color/color_username_login"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shapelogin"
            android:fontFamily="@font/kanit_regular"
            android:padding="10dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17.69dp"
            android:fontFamily="@font/kanit_regular"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/txt_color_all" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_login_fb"
            style="@style/FacebookLoginButton"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:fontFamily="@font/kanit_regular"
            android:padding="10dp"
            android:paddingStart="33.14dp"
            android:paddingTop="10dp"
            android:paddingEnd="33.14dp"
            android:paddingBottom="10dp"
            android:shadowColor="@android:color/transparent"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_fb_custom"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="16.31dp"
            android:background="@drawable/shapeloginfacebook"
            android:drawableStart="@drawable/ic_fb"
            android:fontFamily="@font/kanit_light"
            android:padding="12.5dp"
            android:paddingStart="33.14dp"
            android:paddingEnd="33.14dp"
            android:text="@string/com_facebook_loginview_log_in_button_long"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41.82dp">

            <TextView
                android:id="@+id/txt_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_regular"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/ForgetPassword"
                android:textColor="@color/txt_color_all" />

            <TextView
                android:id="@+id/txt_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/kanit_regular"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/create_account"
                android:textColor="@color/txt_color_all" />

        </RelativeLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90000000"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressbar"
            android:indeterminateDrawable="@drawable/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>


</RelativeLayout>